--- a/app/admin/page.module.css
+++ b/app/admin/page.module.css
@@ -1,32 +1,17 @@
 .main {
-    background-color: aliceblue;
-    --gray-rgb: 0, 0, 0;
-    --gray-alpha-200: rgba(var(--gray-rgb), 0.08);
-    --gray-alpha-100: rgba(var(--gray-rgb), 0.05);
-  
-    --button-primary-hover: #383838;
-    --button-secondary-hover: #f2f2f2;
-  
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+
+.content {
+    grid-auto-flow: row;
     display: grid;
-    grid-template-rows: 20px 1fr 20px;
-    align-items: center;
-    justify-items: center;
-    min-height: 100svh;
-    padding: 80px;
-    gap: 64px;
-    font-family: var(--font-geist-sans);
-}
-
-.button {
-    border-style: solid;
-    border-width: 2px;
-    border-left-width: 2px;
-    border-right-width: 2px;
-    border-color: pink;
-    align-items: center;
-    justify-items: center;
-}
-
-.topbar {
-    position: sticky;
+    gap: 1em;
+    grid-template-columns: repeat(auto-fill, 20em);
+    grid-auto-rows: 20em;
+    margin: 1em;
+    margin-top: 0em;
 }
