--- a/app/globals.css
+++ b/app/globals.css
@@ -1,12 +1,15 @@
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #000000;
+  --misty-pink: #fbdada
+  --matte-black: #28282b;
 }
 
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  height: 100%;
 }
 
 body {
