--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,7 @@
 :root {
-  --background: #ffffff;
-  --foreground: #000000;
-  --misty-pink: #fbdada
+  --foreground: #ffffff;
+  --background: #000000;
+  --misty-pink: #fbdada;
   --matte-black: #28282b;
 }
 
