--- a/app/components/navbar/navbar.module.css
+++ b/app/components/navbar/navbar.module.css
@@ -1,5 +1,5 @@
 .navbar {
-    border-bottom: 3px solid pink;
+    border-bottom: 3px solid black;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -8,8 +8,14 @@
     left: 0;
     align-items: center;
     width: 100%;
-    height: 3em;
-    box-shadow: 0 0 1em pink;
-    background-color: white;
+    height: 4em;
+    box-shadow: 0 0 1em black;
+    background-color: var(--misty-pink);
     z-index: 50;
+    color: black;
+}
+
+.title {
+    font-size: 1.5em;
+    font-family: "Unbounded", serif;
 }
