--- a/app/components/sidebar/sidebar.module.css
+++ b/app/components/sidebar/sidebar.module.css
@@ -7,26 +7,31 @@
     top: 0;
     right: 0;
 
-    width: 10em;
+    width: 15em;
     height: 100%;
-    border-left: 3px solid pink;
+    background-color: color-mix(in srgb, var(--matte-black), transparent 50%);
+    border-left: 3px solid color-mix(in srgb, var(--matte-black), transparent 25%);
+    box-shadow: 0 0 0.5em #28282b;
 }
 
 .create {
-    background-color: rgb(102, 202, 102);
-    border-color: rgb(102, 202, 102);
-    width: 8em;
-    height: 4em;
+    background-color: #fbdada;
+    border-color: #fbdada;
+    width: 7em;
+    height: 3em;
+    box-shadow: 0 0 1em #000000;
 }
 
 .delete {
-    background-color: rgb(255, 86, 86);
-    border-color: rgb(255, 86, 86);
-    width: 8em;
-    height: 4em;
+    background-color: var(--misty-pink);
+    border-color: var(--misty-pink);
+    width: 7em;
+    height: 3em;
+    box-shadow: 0 0 1em #000000;
 }
 
 .buttonText {
+    font-family: "Unbounded", serif;
     font-size: 1.5em;
-    color: white;
+    color: var(--matte-black);
 }
