--- a/app/signup/page.module.css
+++ b/app/signup/page.module.css
@@ -2,7 +2,16 @@
     height: 100%;
     width: 100%;
     justify-items: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.signup {
+    justify-items: center;
     align-content: center;
+    height: 100%;
+    width: 100%;
 }
 
 .form {
