--- a/app/components/popup/popup.module.css
+++ b/app/components/popup/popup.module.css
@@ -1,11 +1,51 @@
-.menu {
-    display: none; /* Hidden by default */
+.container {
     position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
     left: 0;
     top: 0;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.menu {
+    height: 50%;
+    width: 50%;
+    align-content: center;
+
+    background-color: color-mix(in srgb, var(--matte-black), transparent 50%);
+    border: color-mix(in srgb, var(--matte-black), transparent 25%) solid 2px;
+    border-radius: 10px;
+    background-color: var(--matte-black);
+    padding: 1em;
+}
+
+.close {
+    position: relative;
+    background-color: #fbdada;
+    border-color: #fbdada;
+    width: 7.5em;
+    height: 2em;
+    bottom: 46.75%;
+}
+
+.button {
+    position: relative;
+    height: 2em;
+    width: 7.5em;
+    top: -25%;
+    left: 25%;
+    background-color: #fbdada;
+    border-color: #fbdada;
+}
+
+.textInput {
+    height: 2em;
+    background-color: color-mix(in srgb, var(--matte-black), transparent 60%);
+    border: color-mix(in srgb, var(--matte-black), transparent 50%) solid 1px;
+    border-radius: 3px;
+    padding: .5em;
+    color: var(--foreground)
 }
