--- a/app/components/Reservation Card/reservationCard.module.css
+++ b/app/components/Reservation Card/reservationCard.module.css
@@ -33,6 +33,8 @@
 }
 
 .button {
+    border-radius: 10px;
+    border: color-mix(in srgb, var(--misty-pink), transparent 50%) solid 1px;
     background-color: #fbdada;
     border-color: #fbdada;
     width: 7.5em;
